# chatgpt_summarizer

./: Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
src/chatgpt_summarizer/: main.py
