[tool.poetry]
name = "chatgpt-summarizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
openai = "^0.27.4"
beautifulsoup4 = "^4.12.2"
langchain = "^0.0.138"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
